Move Xen Store functionality to XenStore class
Signed-off-by: al1 <al1img@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SOURCES
 	src/BackendBase.cpp
 	src/ChannelBase.cpp
 	src/FrontendHandlerBase.cpp
+	src/XenStore.cpp
 )
 
 include_directories(
