Add event channel and ring buffer
Signed-off-by: Oleksandr Grytsov <al1img@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 
 project(audio_be)
 
-if (NOT XEN_INCLUDE_PATH)
+if (NOT 	)
     message(FATAL_ERROR "XEN_INCLUDE_PATH is not defined")
 endif()
 
@@ -10,17 +10,24 @@ if (NOT XEN_LIB_PATH)
     message(FATAL_ERROR "XEN_LIB_PATH is not defined")
 endif()
 
+if (NOT IF_INCLUDE_PATH)
+    message(FATAL_ERROR "IF_INCLUDE_PATH is not defined")
+endif()
+
 set(SOURCES
 	src/alsa_be.cpp
 	src/BackendBase.cpp
-	src/ChannelBase.cpp
+	src/DataChannelBase.cpp
+	src/EventChannel.cpp
 	src/FrontendHandlerBase.cpp
+	src/RingBuffer.cpp
 	src/XenStore.cpp
 )
 
 include_directories(
 	include
 	${XEN_INCLUDE_PATH}
+	${IF_INCLUDE_PATH}
 )
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
