Change using xenstat lib to xen control in XenStat
Signed-off-by: Oleksandr Grytsov <al1img@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,5 +38,5 @@ link_directories(${XEN_LIB_PATH})
 
 add_executable(alsa_be ${SOURCES})
 
-target_link_libraries(alsa_be xenctrl xenstore xenstat yajl glog pthread)
+target_link_libraries(alsa_be xenctrl xenstore glog pthread)
 
