Create XenCtrl class fix bugs for playback
Signed-off-by: Oleksandr Grytsov <al1img@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,10 +18,9 @@ set(SOURCES
 	src/alsa/AlsaPcm.cpp
 	src/xen/BackendBase.cpp
 	src/xen/DataChannelBase.cpp
-	src/xen/EventChannel.cpp
 	src/xen/FrontendHandlerBase.cpp
-	src/xen/RingBuffer.cpp
 	src/xen/Utils.cpp
+	src/xen/XenCtrl.cpp
 	src/xen/XenStat.cpp
 	src/xen/XenStore.cpp
 	src/AlsaBackend.cpp
