Add doxygen to cmake file
Signed-off-by: Oleksandr Grytsov <al1img@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,3 +46,12 @@ add_executable(alsa_be ${SOURCES})
 
 target_link_libraries(alsa_be xenctrl xenstore xenevtchn xengnttab asound pthread)
 
+find_package(Doxygen)
+if(DOXYGEN_FOUND)
+	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/doxygen.cfg ${CMAKE_CURRENT_BINARY_DIR}/doxygen.cfg @ONLY)
+	add_custom_target(
+		doc ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/doxygen.cfg
+		WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+		COMMENT "Generating API documentation with Doxygen" VERBATIM
+	)
+endif(DOXYGEN_FOUND)
