Rename DataChannelBase to DataChannel as it doesn't need to be inherited
Signed-off-by: Oleksandr Grytsov <al1img@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ endif()
 set(SOURCES
 	src/alsa/AlsaPcm.cpp
 	src/xen/BackendBase.cpp
-	src/xen/DataChannelBase.cpp
+	src/xen/DataChannel.cpp
 	src/xen/FrontendHandlerBase.cpp
 	src/xen/Log.cpp
 	src/xen/Utils.cpp
